--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "lodash.debounce": "^4.0.8",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.0-next.98",
+    "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "@types/lodash.debounce": "^4.0.6",
+    "prettier": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
